--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title><%= pageTitle %></title>
-  <link rel="stylesheet" href="/css/login.css">
+    <meta charset="UTF-8">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-  <h1>Login Page</h1>
-  <form action="/login" method="POST">
-    <input type="text" name="login_id" placeholder="Enter login ID" required>
-    <input type="password" name="password" placeholder="Enter password" required>
-    <button type="submit">Login</button>
-  </form>
+    <div class="container">
+        <h1>Login Page</h1>
+        <form action="/login" method="POST">
+            <input type="text" name="login_id" placeholder="Enter login ID" required>
+            <input type="password" name="password" placeholder="Enter password" required>
+            <button type="submit">Login</button>
+        </form>
+    </div>
 </body>
+
 </html>
