--- a/views/home/customer-list.ejs
+++ b/views/home/customer-list.ejs
@@ -39,6 +39,9 @@
                         <p><strong>Phone:</strong>
                             <%= customer.phone %>
                         </p>
+                        <p><strong>UUID:</strong>
+                            <%= customer.uuid %>
+                        </p>
                     </div>
                 </div>
                 <% }); %>
